apps/sftpgo/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftpgo-http
  namespace: sftpgo
spec:
  selector:
    app: sftpgo
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
