apps/sftpgo/service-sftp.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftpgo-sftp
  namespace: sftpgo
spec:
  selector:
    app: sftpgo
  type: LoadBalancer
  ports:
    - name: sftp
      port: 2022
      targetPort: sftp
