apps/sftpgo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sftpgo
  namespace: sftpgo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: transfer.danavira.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sftpgo-http
                port:
                  name: http
  tls:
    - secretName: sftpgo-tls
      hosts:
        - transfer.danavira.com
